<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:paddingVertical="18dp"
    android:paddingHorizontal="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_del_restaurante"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/layoutOpciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/titulo">

        <androidx.cardview.widget.CardView
            android:id="@+id/view2sillas"
            android:layout_width="100dp"
            android:layout_height="130dp"
            app:layout_constraintTop_toBottomOf="@id/titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="30dp"
            app:cardBackgroundColor="@color/elements_bg_color">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_mesa"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_asientos"
                    android:textSize="17sp"
                    android:textStyle="bold"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/view4sillas"
            android:layout_width="100dp"
            android:layout_height="130dp"
            app:layout_constraintTop_toBottomOf="@id/titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="30dp"
            app:cardBackgroundColor="@color/elements_bg_color"
            android:layout_marginHorizontal="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_mesa"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_asientos"
                    android:textSize="17sp"
                    android:textStyle="bold"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/view8sillas"
            android:layout_width="100dp"
            android:layout_height="130dp"
            app:layout_constraintTop_toBottomOf="@id/titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="30dp"
            app:cardBackgroundColor="@color/elements_bg_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_mesa"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8_asientos"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/IntroduceTitulo"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutOpciones"
        android:text="@string/introduce_tu_nombre"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/text_color"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tfNombre"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/IntroduceTitulo"
        android:background="@color/elements_bg_color"
        android:hint="@string/name"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tfNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/elements_bg_color"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnMenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_left_arrow"
                app:maxImageSize="@android:dimen/app_icon_size"
                android:backgroundTint="@color/selected_elements_color"/>

            <TextView
                android:id="@+id/tvHora"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="25dp"
                android:text="@string/hora"
                android:textStyle="bold"
                android:textSize="40sp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrow"
                app:maxImageSize="@android:dimen/app_icon_size"
                android:backgroundTint="@color/selected_elements_color"/>
        </LinearLayout>
        
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnReservar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:maxImageSize="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_reservar"
        android:backgroundTint="@color/selected_elements_color"/>
    


</androidx.constraintlayout.widget.ConstraintLayout>